--- a/VMemorySimulator/VMemorySimulator.csproj
+++ b/VMemorySimulator/VMemorySimulator.csproj
@@ -50,15 +50,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="model\Clock.cs" />
     <Compile Include="model\LRU.cs" />
     <Compile Include="model\Memory.cs" />
     <Compile Include="model\MemoryManager.cs" />
     <Compile Include="model\Page.cs" />
     <Compile Include="model\PageTable.cs" />
     <Compile Include="model\Process.cs" />
+    <Compile Include="model\ScriptRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="view\MemoryView.cs">
+      <SubType>component</SubType>
+    </Compile>
+    <Compile Include="view\TableView.cs">
       <SubType>component</SubType>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
